# sarm_rl

./: .gitignore  README.md
conrft/: README.md  radme.txt
conrft/examples/: data_util.py  record_demos.py  record_demos_octo.py  record_demos_octo_stage.py  record_success_fail.py  replay.py  train_conrft_octo.py  train_conrft_octo_stage.py  train_reward_classifier.py
conrft/examples/experiments/: config.py  mappings.py
conrft/examples/experiments/pick_cube_sim/: config.py  run_actor.sh  run_actor_conrft.sh  run_learner.sh  run_learner_conrft.sh  run_learner_conrft_pretrain.sh  sarm_wrapper.py
conrft/flexiv_env/envs/: flexiv_env.py
conrft/flexiv_env/resources/: flexiv_Rizon4s_kinematics.urdf
conrft/franka_env/camera/: rs_capture.py
conrft/franka_env/envs/: wrappers.py
conrft/franka_env/spacemouse/: spacemouse_expert.py
conrft/franka_sim/: requirements.txt
conrft/franka_sim/franka_sim/: mujoco_gym_env.py
conrft/ros2_client/: stage_query_client.py
conrft/serl_launcher/: requirements.txt  setup.py
conrft/serl_launcher/serl_launcher/utils/: launcher.py
opensarm/: deploy.py  train.py
opensarm/config/: sarm.yaml  sarm_ros.yaml
opensarm/workspace/: rewind_ws.py  sarm_ws.py  stage_srv_ws.py  test.py
ros2_ws/src/service_test_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/stage_srv_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/stage_srv_cpp/srv/: StageInference.srv
service_client_example/: stage_query_client.py
transform_dataset/: check_reward.py  check_video.py  convert_stat_sarm.py  transform_to_lerobot.py  transform_to_lerobot_local.py
(+10 files in other folders)
